GF Embedded with Virtual Threads, simple async benchmark in Java Signed-off-by:Ondro Mihalyi <mihalyi@omnifish.ee>